--- a/style.css
+++ b/style.css
@@ -664,6 +664,26 @@ iframe {
     margin-top: 2rem;
 }
 
+#response-message {
+    display: none;
+    margin-top: 15px;
+    padding: 15px;
+    font-size: 18px;
+    text-align: center;
+    border-radius: 5px;
+    font-weight: bold;
+}
+.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
 .footer {
     position: relative;
     bottom: 0;
